Minor configuration changes for Sonar
Change-Id: I624ad02ed59a61390554c3714553f38051ac8dc3
Issue-Id: ACUMOS-1206
Description: Modified pom.xml of DS modules for Sonar Code Coverage
Signed-off-by: PushpendraVerma <pv00607222@techmahindra.com>