@@ -23,7 +23,7 @@
 
   <groupId>org.acumos.design-studio</groupId>
   <artifactId>csvdatabroker</artifactId>
-  <version>1.4.0-SNAPSHOT</version>
+  <version>1.4.1-SNAPSHOT</version>
   <packaging>jar</packaging>
   <name>Design Studio CSV Databroker </name>
 
@@ -277,10 +277,6 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>2.22.0</version>
-				<configuration>
-					<argLine> --illegal-access=permit
-					</argLine>
-				</configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -331,7 +327,7 @@
 		<plugin>
 			<groupId>org.jacoco</groupId>
 			<artifactId>jacoco-maven-plugin</artifactId>
-			<version>0.8.1</version>
+			<version>0.8.4</version>
 			<executions>
 				<execution>
 					<id>default-prepare-agent</id>
